Add stub scan products and cors support
